# vidgen

./: .gitignore  .rustfmt.toml  Cargo.toml  NOTICE  README.adoc  flake.nix  gen_testd.ps1
src/: ffmpeg.rs  framelist.rs  main.rs  quirks.rs  runner.rs  transparency.rs  x264.rs
