[package]
name = "vidgen"
version = "1.1.1"
edition = "2021"
authors = ["HeapUnderflow <heapunderflow@outlook.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.13", features = ["derive", "color"] }
futures = "0.3.21"
indicatif = "0.16.2"
once_cell = { version = "1.10.0", features = ["parking_lot"] }
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
time = "0.3.9"
tokio = { version = "1.18.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["fs"] }
tracing = { version = "0.1.34", features = ["async-await"] }
tracing-subscriber = { version = "0.3.11", features = ["parking_lot", "registry"] }

[profile.release]
opt-level = 2
codegen-units = 1
lto = "fat"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
